feat: redesign projects section on homepage

--- a/src/components/MainHero/MainHero.scss
+++ b/src/components/MainHero/MainHero.scss
@@ -3,22 +3,19 @@
 @use "../../styles/partials/typography" as *;
 
 .main-hero {
-    padding-top: 4.0rem;
-    padding-bottom: 2.0rem;
+    padding: 4.0rem 2.0rem 2.0rem;
     display: flex;
     flex-direction: column;
 
     @include tablet {
-        padding-top: 6.0rem;
-        padding-bottom: 3.0rem;
+        padding: 6.0rem 0 3.0rem;
         width: 90%;
         flex-direction: row;
         align-items: flex-start;
     }
 
     @include desktop {
-        padding-top: 8.0rem;
-        padding-bottom: 3.0rem;
+        padding: 8.0rem 0 3.0rem;
         width: 80%;
 
     }
