--- a/src/components/MainHero/MainHero.scss
+++ b/src/components/MainHero/MainHero.scss
@@ -8,7 +8,8 @@
     flex-direction: column;
 
     @include tablet {
-        padding: 6.0rem 0 3.0rem;
+        padding-top: 6.0rem;
+        padding-bottom: 3.0rem;
         width: 90%;
         flex-direction: row;
         align-items: flex-start;
